# cpp-app-config-manager

./: README.md
cpp-ci-template/: .clang-format  .gitignore  CMakeLists.txt  README.md
cpp-ci-template/.github/workflows/: ci.yml  pr-checks.yml
cpp-ci-template/config/: app.conf
cpp-ci-template/scripts/: build.sh
cpp-ci-template/src/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  ConfigParser.cpp  ConfigParser.hpp  Environment.cpp  Environment.hpp  main.cpp
cpp-ci-template/tests/: CMakeLists.txt  test_ConfigManager.cpp  test_ConfigParser.cpp
